<?xml version="1.0"?>
<package>
    <name>camera_utils</name>
    <version>0.0.0</version>
    <description>Utility functions for camera</description>
    <maintainer email="chtseng@itri.org.tw">chtseng</maintainer>
    <license>TODO</license>

   <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
    <build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>
   <!--
   <build_depend>message_generation</build_depend>

    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>autoware_msgs</build_depend>

    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>autoware_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
-->
    <export>
    </export>
</package>
