<?xml version="1.0"?>
<package>
    <name>camera_utils</name>
    <version>0.0.1</version>
    <description>Utility functions for camera</description>
    <maintainer email="chtseng@itri.org.tw">chtseng</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
    <build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <build_depend>car_model</build_depend>
    <run_depend>car_model</run_depend>
    <export>
    </export>
</package>
