<?xml version="1.0"?>
<package>
    <name>deeplab</name>
    <version>0.0.0</version>
    <description>deeplab: image segmentation</description>
    <maintainer email="chtseng@itri.org.tw">chtseng</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>

    <build_depend>camera_utils</build_depend>
    <build_depend>car_model</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>camera_utils</run_depend>
    <run_depend>car_model</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <export>
    </export>
</package>
